corrigindo exibir erro lgin

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -2,7 +2,9 @@
 
 {%block 'content'%}
 <div class="container">
-    <form action="" class="form-control">
+    <form action="" class="form-control" method="POST">
+        {% csrf_token %}
+        {{error}}
         {{form}}
         <input type="submit" value="Entrar" class="btn btn-primary">
         <p>Não tem conta ? <a href="{% url 'register'%}">Click Aqui!!!</a></p>
